# Elliptic

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile  LICENSE  Makefile  README.md  add_copyright.sh  compile_commands.json  format.sh  lexer.cc  lexer.h  main.cc  main.cpp  scanner.cc  scanner.h  tokens.h
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
AST/: nodes.h  parser.cc  parser.h
Grammar/: grammar.md  grammar.tex
docs/: Concepts.md  Philosophy.md  Project.md
include/: lexer.hpp  scanner.hpp  tokens.hpp
include/AST/: nodes.hpp  parser.hpp
include/Generation/: generator.hpp
src/: lexer.cc  main.cc  scanner.cc
src/AST/: parser.cc
src/Generation/: generator.cc
tests/: test_lexer.cc
